--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -1,3 +1,13 @@
-.container{
-	max-width: 1200px!important;
+.container {
+    max-width: 1200px !important;
+
+    @media screen and (max-width: 576px) {
+        padding-left: 8px !important;
+        padding-right: 8px !important;
+    }
+}
+
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
 }
